...
  mixed,
  custom;

  String get displayName {
    switch (this) {
      case BoxCategory.premium:
        return 'Премиум ет';
      case BoxCategory.qazi:
        return 'Қазы';
      case BoxCategory.organs:
        return 'Субөнімдер';
      case BoxCategory.mixed:
        return 'Аралас';
      case BoxCategory.custom:
        return 'Таңдамалы';
...
